<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/ic_tab_shop"
        android:title="@string/tab_shop" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_tab_search"
        android:title="@string/tab_search" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_tab_cart"
        android:title="@string/tab_cart" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_tab_orders"
        android:title="@string/tab_orders" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_tab_account"
        android:title="@string/tab_account" />
</menu>
